Reversed removal of flexbox, changed flexbox to make sure it doesn't overflow the page.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -146,9 +146,9 @@ footer.bk-footerp {
 
 .widget.extendednavigation {
     -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
     position: relative;
     display: inline-block;
     vertical-align: middle;
